# JW-Notes-Merger-Server-V2

./: .gitignore  Dockerfile  README.md  base_schema.sql  pyproject.toml  teste.txt
app/: main.py  merger.py  server.py
